--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -26,6 +26,7 @@
 
 .hero-unit{
 	background: url('forest2.png') no-repeat 50% 50%;
+	background-size:cover;
 	//filter: alpha(opacity=30);  
   //-moz-opacity: 0.3;  
   //-khtml-opacity: 0.3;  
