--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Account: <%= @user.username %></h1>
+<h1>Edit Account with Username: <%= @user.username %></h1>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -10,8 +10,8 @@
       </ul>
     </div>
   <% end %>
-  <%= f.text_field :username, :placeholder=>"Set New Username"%><br />
-  <%= f.password_field :password, :placeholder=>"Set a New Password" %>><br />
+  <%= f.text_field :username, :placeholder=>"Set New Username"%><br /><br />
+  <%= f.password_field :password, :placeholder=>"Set a New Password" %><br /><br />
   <%= if @user.human %>
     <p>Confirm you're human for the form go through and save your account.</p>
     <%= @publisher_html.html_safe %>
