--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="span4 offset 2" id="bookmark_list_view">
 <h1>Edit Account with Username: <%= @user.username %></h1>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
@@ -16,5 +17,6 @@
     <p>Confirm you're human for the form go through and save your account.</p>
     <%= @publisher_html.html_safe %>
   <% end %>
-  <div class="actions"><%= f.submit "Sign Up" %></div>
+  <button type="submit" class="btn btn-primary btn-large">Submit Changes</button>
 <% end %>
+</div>
