--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Account</h1>
+<h1>Sign Up!</h1>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -13,5 +13,5 @@
   <%= f.text_field :username, :placeholder=>"Username"%><br /><br />
   <%= f.password_field :password, :placeholder=>"Password" %><br /><br />
   <%= @publisher_html.html_safe %>
-  <div class="actions"><%= f.submit "Sign Up" %></div>
+  <button type="submit" class="btn btn-primary btn-large">Create Account</button>
 <% end %>
