--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,4 +1,10 @@
 <div class="span3">
+
+    <%= if current_user.nil %>
+        <% if !current_user.human %>
+            <li><%= link_to "Save your account: Confirm you're human", edit_user_path(@user), class:"btn btn-large btn-action btn-block" %></li>
+        <% end %>
+    <% end %>
     <div class="well sidebar-nav">
       <ul class="nav nav-list">
         <% if current_user %>
@@ -44,4 +50,5 @@
         <!-- <li><%= link_to "Brunettes", '/playlists/16'%></li> -->
       </ul>
     </div>
+
 </div>
