--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="span4 offset 2" id="bookmark_list_view">
+<div class="span4 offset2">
 <h1>Edit Account with Username: <%= @user.username %></h1>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
@@ -15,7 +15,7 @@
   <%= f.password_field :password, :placeholder=>"Set a New Password" %><br /><br />
   <%= if @user.human %>
     <p>Confirm you're human for the form go through and save your account.</p>
-    <%= @publisher_html.html_safe %>
+    <%= @publisher_html.html_safe %><br />
   <% end %>
   <button type="submit" class="btn btn-primary btn-large">Submit Changes</button>
 <% end %>
