--- a/app/views/users/_modal_edit.html.erb
+++ b/app/views/users/_modal_edit.html.erb
@@ -7,7 +7,9 @@
     <div class="modal-body">
       <%= f.text_field :username, :placeholder=>"Username" %><br />
       <%= f.password_field :password, :placeholder=>"Password" %><br>
-      <%= @publisher_html.try(:html_safe)  %>
+      <% if !(@user.human?) %>
+        <%= @publisher_html.try(:html_safe)  %>
+      <% end %>
     </div>
     <div class="modal-footer">
       <div class = "form-buttons">
