--- a/app/views/users/_modal_new.html.erb
+++ b/app/views/users/_modal_new.html.erb
@@ -6,7 +6,8 @@
   <%= form_for @user, :html => { "data-type" => "json"}, :remote=>true do |f|%>
     <div class="modal-body">
       <%= f.text_field :username, :placeholder=>"Username" %><br />
-      <%= f.password_field :password, :placeholder=>"Password" %>
+      <%= f.password_field :password, :placeholder=>"Password" %><br />
+      <%= @publisher_html.try(:html_safe)  %>
     </div>
     <div class="modal-footer">
       <div class = "form-buttons">
