--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,8 +27,8 @@
           <% else %>
             <% if current_user.human %>
               <li class="dropdown">
-            <% else %>
-              <li class="dropdown" id="temp-acct-popover-holder" data-html=true data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="<p id=temp-acct-popover>An account has been created for you.<br />The password is the same as the username.</div>">
+            <% elsif current_page?(home_path) %>
+              <li class="dropdown" id="temp-acct-popover-holder" data-html=true data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="<p id=temp-acct-popover>An account has been created for you.<hr>The password is the same as the username. <hr>Since this is a temp. account, your account gets wiped when you leave unless you confirm you're human.</div>">
             <% end %>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src='/assets/glyphicons/glyphicons_003_user.png'> </img><%= current_user.username %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
