--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,10 +1,10 @@
 <div class="span3">
     <% if current_user %>
-        <%# if !current_user.human %>
-            <!-- <p>This temporary account will get deleted at some point if you don't confirm you're a human. </p> -->
+        <%if !current_user.human %>
+            <p>This temporary account will get deleted at some point if you don't confirm you're a human. </p> 
             <%= link_to "<span style='text-align:center'>Save Your account:<br />Confirm you're human</span>".html_safe, edit_user_path(current_user), class:"btn btn-large btn-danger btn-block" %>
             <br />
-        <%# end %>
+        <% end %>
     <% end %>
     <div class="well sidebar-nav">
       <ul class="nav nav-list">
@@ -13,9 +13,6 @@
             <li><a href ="javascript:(function(){jq=document.createElement('SCRIPT');jq.type='text/javascript';jq.src='//www.vrepo.com/jsfiles/jquery_bookmarklet.min.js';document.getElementsByTagName('head')[0].appendChild(jq);})();"><%= image_tag 'bookmarklet.png' %></a><li>
             <li class="nav-header">Actions</li>
             <li><%= link_to 'Home', current_user %></li>
-            <% if !current_user.human %>
-                <li><strong><%= link_to "Save your account: Confirm you're human", edit_user_path(current_user) %></strong></li>
-            <% end %>
             <!-- if there is a valid playlist
             make sure that the current_user owns this playlist, 
             that this is the show playlist view
