--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,7 +34,7 @@
 			  <div class="span3">
 			  	<div class="center-button-table"><div class="center-button-cell">
 			  		<!-- something that triggers sign-in -->
-		  			<%= link_to "Sign In", '', :class=>"btn btn-primary btn-large", :id=>"signin-flash" %>
+		  			<%= link_to "Sign In", login_path, :class=>"btn btn-primary btn-large" %>
 			  		<br />
 			  	</div></div>
 			  </div>
