--- a/app/views/jsfiles/_bookmarklet_content.html.erb
+++ b/app/views/jsfiles/_bookmarklet_content.html.erb
@@ -1,3 +1,4 @@
+<div class = "cleanslate">
 <div style="display:none"><%= csrf_meta_tags %></div>
 <div class="floatright">
 <% if !(current_user.nil?) %>
@@ -16,5 +17,6 @@
 		<%= select_tag 'playlist_id', options_from_collection_for_select(current_user.lists, "id","playlist_name"), :include_blank => true %>
 	<% end %><br /></td></tr></table>
 	<%= link_to 'Book It!', '#', class: 'submit_link' %>
-	<%= link_to 'Cancel', '#', class: 'floatright' %>
+	<%= link_to 'Close', '#', class: 'floatright' %>
 <% end %>
+</div>
