changed public playlists, bookmarklet style, and edit controller filters

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -43,8 +43,8 @@
             <li class="nav-header">Actions</li> 
             <li><strong><%= link_to "Sign Up", signup_path  %></strong></li>
         <% end %> 
-        <li class="nav-header">Public</li>
-        <!-- <li><%= link_to "Brunettes", '/playlists/16'%></li> -->
-      </ul>
+        <!-- <li class="nav-header">Public</li>
+            <li><%= link_to "Brunettes", '/playlists/16'%></li>
+      </ul> -->
     </div>
 </div>
