--- a/app/views/jsfiles/bookmarklet.js.erb
+++ b/app/views/jsfiles/bookmarklet.js.erb
@@ -1,5 +1,5 @@
 $bookmarklet(function (){
-	var newSS, styles='#bookmarklet * {margin:4px;} #bookmarklet {background: #A6FFAD;font-size:10px;border-radius: 10px;border: 1px solid;width: 300px;top: 5px;right: 30%;position:fixed;z-index:999998;} #bookmarklet  .floatright {float:right;}';
+	var newSS, styles='#bookmarklet * {margin:4px;} #bookmarklet {background: #FFFFFF; font-family: \'Helvetica Neue\', Helvetica, Arial, sans-serif; color:#0088cc; font-size:11px;border-radius: 10px;border: 1px solid;width: 300px;top: 5px;right: 30%;position:fixed;z-index:999998;} #bookmarklet  .floatright {float:right;}';
 	if(document.createStyleSheet) { 
 		document.createStyleSheet("javascript:'"+styles+"'");
 	}
