--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,7 @@
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_020_home.png'></img> VRepo".html_safe, home_path, class:"logo", style:"color:#3880FF" %></li>
-          <!-- <li><%= #link_to "<img src='/assets/glyphicons/glyphicons_195_circle_info.png'></img> Information".html_safe, how_path %></li> -->
-          <li><%= link_to "<img src='/assets/glyphicons/glyphicons_021_snowflake.png'></img> About Us".html_safe, about_path %></li><!-- this stuff can probably go to the footer -->
+          <li><%= link_to "<img src='/assets/glyphicons/glyphicons_021_snowflake.png'></img> About Us".html_safe, about_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_203_lock.png'></img> Privacy".html_safe, privacy_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_010_envelope.png'></img> Contact".html_safe, contact_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_029_notes_2.png'></img> Blog".html_safe, 'http://vrepo.wordpress.com/'%></li>
