--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
   <% end %>
   <%= f.text_field :username, :placeholder=>"Set New Username"%><br /><br />
   <%= f.password_field :password, :placeholder=>"Set a New Password" %><br /><br />
-  <%= if @user.human %>
+  <% if @user.human %>
     <p>Confirm you're human for the form go through and save your account.</p>
     <%= @publisher_html.html_safe %><br />
   <% end %>
