--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src='/assets/glyphicons/glyphicons_003_user.png'> </img><%= current_user.username %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
 	            	<li><%=link_to "Bookmarks Home", current_user , "tabindex" => "-1"%></li>
-								<li><%=link_to "Customize Profile", '#', "tabindex" => "-1"%></li>
+								<li><%=link_to "Customize Profile", edit_user_path(current_user), "tabindex" => "-1"%></li>
                 <li class="divider"></li>
 								<li><%= link_to 'Log Out', logout_path , "tabindex" => "-1"%></li>
               </ul>
