--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="span4 offset2">
-<h1>Edit Account with Username: <%= @user.username %></h1>
+<div class="span7 offset2">
+<h2>Edit Your Account</h2><br />
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -13,7 +13,7 @@
   <% end %>
   <%= f.text_field :username, :placeholder=>"Set New Username"%><br /><br />
   <%= f.password_field :password, :placeholder=>"Set a New Password" %><br /><br />
-  <% if @user.human %>
+  <% if !@user.human %>
     <p>Confirm you're human for the form go through and save your account.</p>
     <%= @publisher_html.html_safe %><br />
   <% end %>
