--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,6 @@
     </div> <!-- end of .container -->
     <div id="modalHolder">
     </div>
+    <%= render '/layouts/footer' %>
   </body>
 </html>
