--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= render '/layouts/sidebar' %>
 <div class="span5" id="bookmark_list_view">
-  <h3>Bookmarks that aren't in a playlist</h3>
+  <h3>Unsorted Bookmarks</h3>
   <% if current_user %>
   <%= link_to 'Add Bookmark <i class="icon-plus icon-white"></i>'.html_safe, '#', class:"btn btn-primary new-bookmark-modal-link" %>
     <div id="new-bookmark-modal-holder">
