--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,32 @@
 @import "bootstrap";
-body { padding-top: 60px; }
+body { 
+ padding-top: 60px;
+}
+
+.btn-cherry {
+	color: #FFFFFF;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	background-color: #CC3737;
+	*background-color: #CC3737;
+	background-image: -moz-linear-gradient(top, #FF0000, #CC3737);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#FF0000), to(#CC3737));
+	background-image: -webkit-linear-gradient(top, #FF0000, #CC3737);
+	background-image: -o-linear-gradient(top, #FF0000, #CC3737);
+	background-image: linear-gradient(to bottom, #FF0000, #CC3737);
+	background-repeat: repeat-x;
+	border-color: #CC3737;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF0000', endColorstr='#CC3737', GradientType=0);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+.btn-cherry:hover,
+.btn-cherry:active,
+.btn-cherry.active,
+.btn-cherry.disabled,
+.btn-cherry[disabled] {
+	color: #FFFFFF;
+	background-color: #CC3737;
+	*background-color: #003bb3;
+}
+
 @import "bootstrap-responsive";
